--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -8,11 +8,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v1
+        uses: actions/checkout@v3
 
       - name: Cypress run
-        uses: cypress-io/github-action@v1
+        uses: cypress-io/github-action@v5
+        timeout-minutes: 10
         with:
-          build: npm run build
-          start: npm start
-          wait-on: http://127.0.0.1:5500
+          browser: firefox
