--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -14,4 +14,5 @@ jobs:
         uses: cypress-io/github-action@v5
         timeout-minutes: 10
         with:
+          wait-on: https://ricardooliver.github.io/PRINCING-TABLE-CYPRESS/
           browser: firefox
